Added some webpages to anchor tag in check.html

--- a/projectCSEHTML/check.html
+++ b/projectCSEHTML/check.html
@@ -249,7 +249,7 @@
                 </div>
                 <div class="buttonss">
                     <i class="fa-regular fa-circle-play fa-2xl"></i>
-                    <span><button class="btn btn-primary">Book</button></span>
+                     <span><button class="btn btn-primary"><a href="project1.8.html">Book</a></button></span>
                 </div>
             </div>
         </div>
@@ -323,7 +323,7 @@
                 </div>
                 <div class="buttonss">
                     <i class="fa-regular fa-circle-play fa-2xl"></i>
-                    <span><button class="btn btn-primary">Book</button></span>
+                    <span><button class="btn btn-primary"><a href="project1.5.html">Book</a></button></span>
                 </div>
             </div>
         </div>
