--- a/projectCSEHTML/thinuvuBook.html
+++ b/projectCSEHTML/thinuvuBook.html
@@ -94,7 +94,7 @@
 <div class="container">
   <img id="back" src="https://th-i.thgim.com/public/entertainment/movies/w49s0b/article66064456.ece/alternates/FREE_1200/thunivu.jpeg" alt="Snow" width=100% height=650px>
   
-  <div class="top-left"><div id="image"><img src="https://th-i.thgim.com/public/entertainment/movies/w49s0b/article66064456.ece/alternates/FREE_1200/thunivu.jpeg" width="350px" height="450px"></div></div>
+  <div class="top-left"><div id="image"><img src="static/images/thin1.jpeg" width="350px" height="450px"></div></div>
   
   
   <div class="centered"><p id="p0">THUNIVU</p> 
